--- a/about.html
+++ b/about.html
@@ -59,8 +59,8 @@
                     </div>
                     <div class="site_information">
                         <ul>
-                            <li><a href="mailto:exchang@gmail.com"><img src="images/mail_icon.png" alt="#" />Offical@exchang.com</a></li>
-                            <li><a href="tel:exchang@gmail.com"><img src="images/phone_icon.png" alt="#" />+919834739484</a></li>
+                            <li><a href="mailto:exchang@gmail.com"><img src="images/mail_icon.png" alt="#" />gopiapp8@gmail.com</a></li>
+                            <li><a href="tel:exchang@gmail.com"><img src="images/phone_icon.png" alt="#" />+91 9344 284 113</a></li>
                             <li><a class="join_bt" href="#">Join us</a></li>
                         </ul>
                     </div>
@@ -256,9 +256,9 @@
                                 <div class="footer_blog full white_fonts">
                              <h3>Contact us</h3>
                              <ul class="full">
-                                <li><img src="images/i5.png"><span>Tamil Nadu<br>Thirupattur</span></li>
-                                <li><img src="images/i6.png"><span>ExchangeOffice@gmail.com</span></li>
-                                <li><img src="images/i7.png"><span>+918736435254</span></li>
+                                <li><img src="images/i5.png"><span>Sacred Heart College<br>Thirupattur</span></li>
+                               <li><img src="images/i6.png"><span>gopiapp8@gmail.com</span></li>
+                               <li><img src="images/i7.png"><span>+91 9344 284 113</span></li>
                              </ul>
                          </div>
                             </div>
